--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -114,6 +114,16 @@
         </p>
     </div>
 
+    <div class="govuk-inset-text govuk-!-margin-top-1">
+        <p class="govuk-body">Creating a table
+        </p>
+        <p class="govuk-body" style="letter-spacing: 1px;">
+            | First Header  | Second Header |
+            | ------------- | ------------- |
+            | Content Cell  | Content Cell  |
+            | Content Cell  | Content Cell  |
+        </p>
+    </div>
     <h2 class="govuk-heading-m">Links and URLs
     </h2>
     <p class="govuk-body">
