APID-573 user documentation in compose email page 2

--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -118,10 +118,10 @@
         <p class="govuk-body">Creating a table
         </p>
         <p class="govuk-body" style="letter-spacing: 1px;">
-            | First Header  | Second Header |
-            | ------------- | ------------- |
-            | Content Cell  | Content Cell  |
-            | Content Cell  | Content Cell  |
+            | First Header  | Second Header |<br/>
+            | ------------- | ------------- |<br/>
+            | Content Cell  | Content Cell  |<br/>
+            | Content Cell  | Content Cell  |<br/>
         </p>
     </div>
     <h2 class="govuk-heading-m">Links and URLs
