APID-573 user documentation in compose email page

--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -116,6 +116,10 @@
 
     <div class="govuk-inset-text govuk-!-margin-top-1">
         <p class="govuk-body">Creating a table
+            <br>
+            <br>
+            <b>You must include a blank line before your table in order for it to correctly render.</b>
+            <br>
         </p>
         <p class="govuk-body" style="letter-spacing: 1px;">
             | First Header  | Second Header |<br/>
