--- a/app/views/components/button.scala.html
+++ b/app/views/components/button.scala.html
@@ -25,7 +25,7 @@
     content = {
         Text(messages(msg))
     },
-    preventDoubleClick = true
+    preventDoubleClick = Option(true)
 ))
 
 @{
