API-6498 - Render html for user selection data obtained from api-gatekeeper-frontend (#74)
* API-6498 - Render html for user selection data obtained from api-gatekeeper-frontend

* API-6498 - pr bot version updates

* API-6498: UI enhancements matching prototype for user selection data, subject, button fields

* API-6498: UI enhancements to fix alignment of fields

* API-6498: Review changes addressed

---------

Co-authored-by: syed-ali-hmrc <al1.sy3d@outlook.com>

--- a/app/views/EmailSentConfirmation.scala.html
+++ b/app/views/EmailSentConfirmation.scala.html
@@ -33,7 +33,7 @@
              <br>
            <span class="govuk-!-font-weight-bold">
              @for((key, value) <- userSelection) {
-               @value  &nbsp;&nbsp;
+                @Html(value)
              }
            </span>
          </div>
