--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -31,49 +31,50 @@
   @errorSummary(form)
 
   <h2 class="govuk-heading-l">Compose email</h2>
-@helper.form(controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())) {
-  @helper.CSRF.formField
 
+    <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())">
+        @helper.CSRF.formField
     <dl class="govuk-summary-list email-summary" style="border-top: 1px solid #b1b4b6;margin-bottom: 30px;border-left: 1px solid #b1b4b6;border-right: 1px solid #b1b4b6;">
         @for((key, value) <- userSelection) {
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular" style="padding-left: 15px; font-weight: 100;">
+                <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular"
+                style="border-bottom: 1px solid #b1b4b6;
+                    padding-left: 20px; padding-right: 10px; white-space: nowrap; width: 10% !important; color: #505a5f;">
                     @key
                 </dt>
-                <dd class="govuk-summary-list__value">
-                    @value
+                <dd class="govuk-summary-list__value email-summary-data">
+                    @Html(value)
                 </dd>
             </div>
         }
     </dl>
-<div class="govuk-form-group @if(form.errors("emailSubject").nonEmpty) {govuk-form-group--error}">
-    <label class="govuk-label" for="email-subject">
-      Subject
-    </label>
-    @fieldError(form.errors, "emailSubject")
-    <input class="govuk-input" id="emailSubject" name="emailSubject" type="text"
-           value="@form.data.getOrElse("emailSubject", "")">
-  </div>
-
-  <div class="govuk-form-group @if(form.errors("emailBody").nonEmpty) {govuk-form-group--error}">
-    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="email-body">
-      Message
-    </label>
-    </h1>
-    @fieldError(form.errors, "emailBody")
-
-    <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8" oninput="auto_grow(this)"
-              aria-describedby="email-body-hint">@form.data.getOrElse("emailBody", "")</textarea>
-  </div>
-
-    <div class="govuk-button-group" style="float: left; margin-top: 0%; margin-left: 0%;">
-        <button class="govuk-button" data-module="govuk-button">
-            Save email
-        </button>
+    <div class="govuk-form-group @if(form.errors("emailSubject").nonEmpty) {govuk-form-group--error}">
+        <label class="govuk-label" for="email-subject">
+          Subject
+        </label>
+        @fieldError(form.errors, "emailSubject")
+        <textarea class="govuk-textarea" id="emailSubject" name="emailSubject" rows="2" type="text">@form.data.getOrElse("emailSubject", "")</textarea>
     </div>
-    <script src='@routes.Assets.versioned("javascripts/resize-textarea.js")' type="text/javascript"></script>
 
-}
+      <div class="govuk-form-group @if(form.errors("emailBody").nonEmpty) {govuk-form-group--error}">
+        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="email-body">
+          Message
+        </label>
+        </h1>
+        @fieldError(form.errors, "emailBody")
+
+        <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8" oninput="auto_grow(this)"
+                  aria-describedby="email-body-hint">@form.data.getOrElse("emailBody", "")</textarea>
+      </div>
+
+        <div class="govuk-button-group" style="float: left; margin-top: 0%; margin-left: 0%;">
+            <button class="govuk-button" data-module="govuk-button">
+                Preview email
+            </button>
+        </div>
+        <script src='@routes.Assets.versioned("javascripts/resize-textarea.js")' type="text/javascript"></script>
+
+    </form>
     <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
         <div class="govuk-button-group" style="float: left; margin-top: 0%; margin-right: 10%;">
             @helper.form(action = controllers.routes.ComposeEmailController.deleteOption(emailUUID, Json.toJson(userSelection).toString())) {
