--- a/app/views/EmailPreview.scala.html
+++ b/app/views/EmailPreview.scala.html
@@ -78,7 +78,7 @@
                                 @key
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                @value
+                                @Html(value)
                             </dd>
                         </div>
                         }
