API-7341: Content Security Policy improvements (#76)
* API-7341: Content Security Policy improvements

* API-7341: Scalafmt and Scalafix

* API-7341: Remove references to unused assets-frontend

--- a/app/views/EmailPreview.scala.html
+++ b/app/views/EmailPreview.scala.html
@@ -71,7 +71,7 @@
 
             <div class="govuk-grid-column-two-thirds" style="box-sizing: border-box;width: 100%;padding: 0 15px;">
                 <div class="email-preview" style="border-top: 1px solid #b1b4b6;margin-bottom: 10px;border-left: 1px solid #b1b4b6;border-right: 1px solid #b1b4b6; border-bottom: 1px solid #b1b4b6;">
-                    <dl class="govuk-summary-list email-summary">
+                    <dl class="govuk-summary-list">
                         @for((key, value) <- userSelection) {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key email-header" style="padding-left: 15px; font-weight: 100">
