--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -19,125 +19,121 @@
 @import uk.gov.hmrc.gatekeepercomposeemailfrontend.controllers
 @import include._
 @import play.api.libs.json._
+
 @this(layout: Layout)
 
 @(emailUUID: String, form: Form[ComposeEmailForm], userSelection: Map[String, String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
-
-@head = {
- <link href='stylesheets/application.css' media="screen" rel="stylesheet" type="text/css" />
-}
 
 @layout(pageTitle = Some(s"${appConfig.title} - Compose Email")) {
   @errorSummary(form)
 
   <h2 class="govuk-heading-l">Compose email</h2>
 
-    <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())">
-        @helper.CSRF.formField
-    <dl class="govuk-summary-list email-summary" style="border-top: 1px solid #b1b4b6;margin-bottom: 30px;border-left: 1px solid #b1b4b6;border-right: 1px solid #b1b4b6;">
-        @for((key, value) <- userSelection) {
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular"
-                style="border-bottom: 1px solid #b1b4b6;
-                    padding-left: 20px; padding-right: 10px; white-space: nowrap; width: 10% !important; color: #505a5f;">
-                    @key
-                </dt>
-                <dd class="govuk-summary-list__value email-summary-data">
-                    @Html(value)
-                </dd>
-            </div>
-        }
+  <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())">
+    @helper.CSRF.formField
+    <dl class="govuk-summary-list email-summary">
+    @for((key, value) <- userSelection) {
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular">
+          @key
+        </dt>
+        <dd class="govuk-summary-list__value email-summary-data">
+          @Html(value)
+        </dd>
+      </div>
+    }
     </dl>
     <div class="govuk-form-group @if(form.errors("emailSubject").nonEmpty) {govuk-form-group--error}">
-        <label class="govuk-label" for="email-subject">
-          Subject
-        </label>
-        @fieldError(form.errors, "emailSubject")
-        <textarea class="govuk-textarea" id="emailSubject" name="emailSubject" rows="2" type="text">@form.data.getOrElse("emailSubject", "")</textarea>
+      <label class="govuk-label" for="email-subject">
+        Subject
+      </label>
+      @fieldError(form.errors, "emailSubject")
+      <textarea class="govuk-textarea" id="emailSubject" name="emailSubject" rows="2" type="text">@form.data.getOrElse("emailSubject", "")</textarea>
     </div>
 
-      <div class="govuk-form-group @if(form.errors("emailBody").nonEmpty) {govuk-form-group--error}">
-        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="email-body">
-          Message
-        </label>
-        </h1>
-        @fieldError(form.errors, "emailBody")
+    <div class="govuk-form-group @if(form.errors("emailBody").nonEmpty) {govuk-form-group--error}">
+      <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="email-body">
+        Message
+      </label>
+      </h1>
+      @fieldError(form.errors, "emailBody")
 
-        <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8" oninput="auto_grow(this)"
-                  aria-describedby="email-body-hint">@form.data.getOrElse("emailBody", "")</textarea>
-      </div>
-
-        <div class="govuk-button-group" style="float: left; margin-top: 0%; margin-left: 0%;">
-            <button class="govuk-button" data-module="govuk-button">
-                Preview email
-            </button>
-        </div>
-        <script src='@routes.Assets.versioned("javascripts/resize-textarea.js")' type="text/javascript"></script>
-
-    </form>
-    <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
-        <div class="govuk-button-group" style="float: left; margin-top: 0%; margin-right: 10%;">
-            @helper.form(action = controllers.routes.ComposeEmailController.deleteOption(emailUUID, Json.toJson(userSelection).toString())) {
-            @helper.CSRF.formField
-            <button draggable="false"
-                    class="govuk-button  govuk-button--secondary"  data-module="govuk-button">
-                Delete email
-            </button>
-            }
-        </div>
+      <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8" oninput="auto_grow(this)"
+      aria-describedby="email-body-hint">@form.data.getOrElse("emailBody", "")</textarea>
     </div>
 
-    <br>
-    <br>
-    <h2 class="govuk-heading-m govuk-!-margin-top-6" style="width: 10px;">Formatting</h2>
-    <p class="govuk-body">
-        To put a title in your template, use a hash:
+    <div class="govuk-button-group" style="float: left; margin-top: 0; margin-left: 0;">
+      <button class="govuk-button" data-module="govuk-button">
+        Preview email
+      </button>
+    </div>
+  </form>
+  <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
+    <div class="govuk-button-group" style="float: left; margin-top: 0; margin-right: 10%;">
+    @helper.form(action = controllers.routes.ComposeEmailController.deleteOption(emailUUID, Json.toJson(userSelection).toString())) {
+      @helper.CSRF.formField
+      <button draggable="false"
+      class="govuk-button  govuk-button--secondary"  data-module="govuk-button">
+        Delete email
+      </button>
+    }
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <h2 class="govuk-heading-m govuk-!-margin-top-6" style="width: 10px;">Formatting</h2>
+  <p class="govuk-body">
+    To put a title in your template, use a hash:
+  </p>
+  <div class="govuk-inset-text govuk-!-margin-top-1">
+    # This is a title
+  </div>
+  <p class="govuk-body">
+    To make bullet points, use asterisks:
+  </p>
+  <div class="govuk-inset-text govuk-!-margin-top-1">
+    * point 1<br/>
+    * point 2<br/>
+    * point 3<br/>
+  </div>
+
+  <p class="govuk-body">
+    To add a horizontal line, use three dashes:
+  </p>
+  <div class="govuk-inset-text govuk-!-margin-top-1">
+    <p class="govuk-body">First paragraph
     </p>
-    <div class="govuk-inset-text govuk-!-margin-top-1">
-        # This is a title
-    </div>
-    <p class="govuk-body">
-        To make bullet points, use asterisks:
+    <p class="govuk-body" style="letter-spacing: 1px;">---
     </p>
-    <div class="govuk-inset-text govuk-!-margin-top-1">
-        * point 1<br/>
-        * point 2<br/>
-        * point 3<br/>
-    </div>
+    <p class="govuk-body">Second paragraph
+    </p>
+  </div>
 
-    <p class="govuk-body">
-        To add a horizontal line, use three dashes:
+  <div class="govuk-inset-text govuk-!-margin-top-1">
+    <p class="govuk-body">Creating a table
+      <br>
+      <br>
+      <b>You must include a blank line before your table in order for it to correctly render.</b>
+      <br>
     </p>
-    <div class="govuk-inset-text govuk-!-margin-top-1">
-        <p class="govuk-body">First paragraph
-        </p>
-        <p class="govuk-body" style="letter-spacing: 1px;">---
-        </p>
-        <p class="govuk-body">Second paragraph
-        </p>
-    </div>
+    <p class="govuk-body" style="letter-spacing: 1px;">
+      | First Header  | Second Header |<br/>
+      | ------------- | ------------- |<br/>
+      | Content Cell  | Content Cell  |<br/>
+      | Content Cell  | Content Cell  |<br/>
+    </p>
+  </div>
+  <h2 class="govuk-heading-m">Links and URLs
+  </h2>
+  <p class="govuk-body">
+    Always use full URLs, starting with https://
+  </p>
+  <div class="govuk-inset-text govuk-!-margin-top-1">
+    Apply now at https://www.gov.uk/example
+  </div>
 
-    <div class="govuk-inset-text govuk-!-margin-top-1">
-        <p class="govuk-body">Creating a table
-            <br>
-            <br>
-            <b>You must include a blank line before your table in order for it to correctly render.</b>
-            <br>
-        </p>
-        <p class="govuk-body" style="letter-spacing: 1px;">
-            | First Header  | Second Header |<br/>
-            | ------------- | ------------- |<br/>
-            | Content Cell  | Content Cell  |<br/>
-            | Content Cell  | Content Cell  |<br/>
-        </p>
-    </div>
-    <h2 class="govuk-heading-m">Links and URLs
-    </h2>
-    <p class="govuk-body">
-        Always use full URLs, starting with https://
-    </p>
-    <div class="govuk-inset-text govuk-!-margin-top-1">
-        Apply now at https://www.gov.uk/example
-    </div>
+  @views.html.helper.script(args = Symbol("type") -> "module") {
+    initAutoGrowOnInput("emailBody")
   }
-
+}
