--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -44,7 +44,7 @@
     }
     </dl>
     <div class="govuk-form-group @if(form.errors("emailSubject").nonEmpty) {govuk-form-group--error}">
-      <label class="govuk-label" for="email-subject">
+      <label class="govuk-label" for="emailSubject">
         Subject
       </label>
       @fieldError(form.errors, "emailSubject")
@@ -52,13 +52,13 @@
     </div>
 
     <div class="govuk-form-group @if(form.errors("emailBody").nonEmpty) {govuk-form-group--error}">
-      <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="email-body">
+      <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--1" for="emailBody">
         Message
       </label>
       </h1>
       @fieldError(form.errors, "emailBody")
 
-      <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8" oninput="auto_grow(this)"
+      <textarea class="govuk-textarea dynamic-text-area" id="emailBody" name="emailBody" style="min-height: 226px;" rows="8"
       aria-describedby="email-body-hint">@form.data.getOrElse("emailBody", "")</textarea>
     </div>
 
