APIS-6989 - Adding APIs menu itemO

--- a/app/views/include/SiteHeader.scala.html
+++ b/app/views/include/SiteHeader.scala.html
@@ -27,6 +27,7 @@
 
 @navigation = @{
     Seq(
+        NavigationItem(content = Text("APIs"), href = Some(appConfig.apiGatekeeperApisFrontendUrl)),
         NavigationItem(content = Text("Applications"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/applications")),
         NavigationItem(content = Text("Developers"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/developers2")),
         NavigationItem(content = Text("Email"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/emails")),
