--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -19,13 +19,14 @@
 @import uk.gov.hmrc.gatekeepercomposeemailfrontend.controllers
 @import include._
 @import play.api.libs.json._
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-@this(layout: Layout)
+@this(layout: Layout, errorSummary: components.errorSummary)
 
 @(emailUUID: String, form: Form[ComposeEmailForm], userSelection: Map[String, String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = Some(s"${appConfig.title} - Compose Email")) {
-  @errorSummary(form)
+  @errorSummary(form.errors)
 
   <h2 class="govuk-heading-l">Compose email</h2>
 
