--- a/app/views/components/errorSummary.scala.html
+++ b/app/views/components/errorSummary.scala.html
@@ -18,25 +18,18 @@
 
 @this(govukErrorSummary: GovukErrorSummary)
 
-@(errors: Seq[FormError], errorFieldSuffix: Option[String] = None, errorId: Option[String] = None)(implicit messages: Messages)
+@(errors: Seq[FormError])(implicit messages: Messages)
 
     @if(errors.nonEmpty) {
         @defining(errors.map { error =>
-            val id = if(error.key == "") { errorId.getOrElse("") } else {
-                error.key + errorFieldSuffix.fold("")(suffix => s".$suffix")
-            }
             ErrorLink(
-                href = Some(s"#$id"),
+                href = Some(s"#$error.key"),
                 content = Text(messages(error.message, error.args:_*))
             )
         }) { errorLinks =>
             @govukErrorSummary(ErrorSummary(
                 errorList = errorLinks,
-                title = Text(messages("error.summary.pageTitle"))
+                title = Text(messages("error.summary.title"))
             ))
         }
-    }
-
-    @{
-        //$COVERAGE-OFF$
     }
