--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -30,7 +30,7 @@
 
   <h2 class="govuk-heading-l">Compose email</h2>
 
-  <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())">
+  <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.emailPreviewAction(emailUUID, Json.toJson(userSelection).toString())">
     @helper.CSRF.formField
     <dl class="govuk-summary-list email-summary">
     @for((key, value) <- userSelection) {
