--- a/app/views/ComposeEmail.scala.html
+++ b/app/views/ComposeEmail.scala.html
@@ -19,25 +19,26 @@
 @import uk.gov.hmrc.gatekeepercomposeemailfrontend.controllers
 @import include._
 @import play.api.libs.json._
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-@this(layout: Layout)
+@this(layout: Layout, errorSummary: components.errorSummary)
 
 @(emailUUID: String, form: Form[ComposeEmailForm], userSelection: Map[String, String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = Some(s"${appConfig.title} - Compose Email")) {
-  @errorSummary(form)
+  @errorSummary(form.errors)
 
-  <h2 class="govuk-heading-l">Compose email</h2>
+  <h2 class="govuk-heading-l" id="page-heading">Compose email</h2>
 
-  <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.upload(emailUUID, Json.toJson(userSelection).toString())">
+  <form name="compose-email" method="post" action="@controllers.routes.ComposeEmailController.emailPreviewAction(emailUUID, Json.toJson(userSelection).toString())">
     @helper.CSRF.formField
     <dl class="govuk-summary-list email-summary">
-    @for((key, value) <- userSelection) {
+    @for(((key, value) ,index) <- userSelection.zipWithIndex) {
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular">
+        <dt class="govuk-summary-list__key email-summary-key govuk-!-font-weight-regular" id="data-key-@index">
           @key
         </dt>
-        <dd class="govuk-summary-list__value email-summary-data">
+        <dd class="govuk-summary-list__value email-summary-data" id="data-value-@index">
           @Html(value)
         </dd>
       </div>
