--- a/app/views/DeleteEmailConfirmation.scala.html
+++ b/app/views/DeleteEmailConfirmation.scala.html
@@ -27,12 +27,12 @@
   <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds" style="width: 100%">
     <div class="govuk-panel govuk-panel--confirmation">
-     <h2 class="govuk-panel__title">You deleted the email</h2>
+     <h2 class="govuk-panel__title" id="page-heading">You deleted the email</h2>
     </div>
     <br>
     <ul class="govuk-list">
      <li>
-      <a class="govuk-link govuk-link--no-visited-state" href="@appConfig.apiGatekeeperFrontendUrl/emails">Back to Emails</a>
+      <a class="govuk-link govuk-link--no-visited-state" href="@appConfig.apiGatekeeperFrontendUrl/emails" id="back-link">Back to Emails</a>
      </li>
     </ul>
    </div>
