--- a/app/views/EmailSentConfirmation.scala.html
+++ b/app/views/EmailSentConfirmation.scala.html
@@ -27,7 +27,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds" style="width: 75%">
         <div class="govuk-panel govuk-panel--confirmation">
-         <h1 class="govuk-panel__title">Email sent</h1>
+         <h1 class="govuk-panel__title" id="page-heading">Email sent</h1>
          <div class="govuk-panel__body govuk-!-font-size-27">
              @users emails sent to users interested in
              <br>
