--- a/app/views/PreviewEmail.scala.html
+++ b/app/views/PreviewEmail.scala.html
@@ -26,7 +26,7 @@
 
 @this(layout: Layout, appConfig: AppConfig, govukNotificationBanner: GovukNotificationBanner, errorSummary: components.errorSummary)
 
-@(emailPreview: String, form: Form[PreviewEmailForm], userSelection: Map[String, String], status: String, previewSent: Boolean)(implicit request: LoggedInRequest[_], messages: Messages)
+@(emailPreview: String, form: Form[PreviewEmailForm], userSelection: Map[String, String], status: String = "", previewSent: Boolean)(implicit request: LoggedInRequest[_], messages: Messages)
 @html = {
     <div>
         <h3 class="govuk-notification-banner__heading" id="email-sent-banner">Test email sent</h3>
@@ -35,6 +35,68 @@
         }</p>
     </div>
 }
+
+@requestHasEmail() =@{
+    request.email.nonEmpty && request.email.get != ""
+}
+
+
+@drawEditMailSection() ={
+
+  @if(!requestHasEmail()) {
+    <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
+        <div class="govuk-button-group">
+   }
+            @helper.form(action = controllers.routes.PreviewEmailController.editEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
+                @helper.CSRF.formField
+                <input type="hidden" name="emailId" value="@form.data.getOrElse("emailUUID", "")" />
+                <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
+                <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
+                @if(status != "SENT") {
+                    <button draggable="false"
+                    class="govuk-button govuk-button--secondary@if(!requestHasEmail()){ govuk-!-width-full}"
+                    data-module="govuk-button" id="edit-email-button">Edit email</button>
+                }
+            }
+    @if(!requestHasEmail()) {
+        </div>
+    </div>
+    }
+}
+
+  @drawSendEmailSection() ={
+      @helper.form(controllers.routes.PreviewEmailController.sendEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
+          @helper.CSRF.formField
+          <input type="hidden" name="emailUUID" value="@form.data.getOrElse("emailUUID", "")" />
+          <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
+          <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
+          @if(status != "SENT") {
+              <div class="@if(!requestHasEmail()){govuk-grid-column-one-half }govuk-!-padding-left-0">
+                  @if(!requestHasEmail()){<div class="govuk-button-group">}
+                  <button class="govuk-button@if(requestHasEmail()){ govuk-!-width-two-thirds}" data-module="govuk-button" value="send" id="send-email-button">
+                      Send email
+                  </button>
+                  @if(!requestHasEmail()){</div>}
+              </div>
+          }
+
+      }
+ }
+
+  @drawDeleteButton() ={
+      <div class="govuk-grid-column-one-half govuk-!-padding-left-0">
+          <div class="govuk-button-group">
+              @helper.form(action = controllers.routes.ComposeEmailController.deleteOption(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
+                  @helper.CSRF.formField
+                  <button draggable="false"
+                  class="govuk-button   govuk-button--secondary" data-module="govuk-button" id="delete-email-button">
+                      Delete email
+                  </button>
+              }
+          </div>
+      </div>
+  }
+
 @layout(pageTitle = Some(s"${appConfig.title} - Email preview")) {
     @errorSummary(form.errors)
 
@@ -46,7 +108,7 @@
             ))
         }
         <h1 class="govuk-heading-l" id="page-heading">Email preview</h1>
-        @if(request.email.nonEmpty && request.email.get != "") {
+        @if(requestHasEmail()) {
             <div class="govuk-grid-column-half govuk-!-padding-left-0 govuk-!-margin-bottom-8">
                 <p class="govuk-body">You can test this email by sending it to @{
                     request.email.get
@@ -65,81 +127,23 @@
 
                     }
 
-                    @helper.form(action = controllers.routes.PreviewEmailController.editEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
-                        @helper.CSRF.formField
-                        <input type="hidden" name="emailId" value="@form.data.getOrElse("emailUUID", "")" />
-                        <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
-                        <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
-                        @if(status == null || status != "SENT") {
-                            <button draggable="false"
-                            class="govuk-button govuk-button--secondary"
-                            data-module="govuk-button"  id="edit-email-button">Edit email</button>
-                        }
-                    }
-
+                    @drawEditMailSection()
                 </div>
                 <hr>
             </div>
-            @helper.form(controllers.routes.PreviewEmailController.sendEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
-                @helper.CSRF.formField
-                <input type="hidden" name="emailUUID" value="@form.data.getOrElse("emailUUID", "")" />
-                <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
-                <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
-                @if(status == null || status != "SENT") {
-                    <div class="govuk-!-padding-left-0">
-                        <button class="govuk-button govuk-!-width-two-thirds" data-module="govuk-button" value="send" id="send-email-button">
-                            Send email
-                        </button>
-                    </div>
-                }
-            }
+                  @drawSendEmailSection()
+
+
         } else {
             <div class="govuk-grid-column-two-thirds">
-
-                @helper.form(controllers.routes.PreviewEmailController.sendEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
-                    @helper.CSRF.formField
-                    <input type="hidden" name="emailUUID" value="@form.data.getOrElse("emailUUID", "")" />
-                    <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
-                    <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
-                    @if(status == null || status != "SENT") {
-                        <div class="govuk-grid-column-one-half govuk-!-padding-left-0">
-                            <div class="govuk-button-group">
-
-                                <button class="govuk-button" data-module="govuk-button" value="send" id="send-email-button">
-                                    Send email
-                                </button>
-
-                            </div>
-                        </div>
-                    }
-                }
-
-                <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
-                    <div class="govuk-button-group">
-                    @helper.form(action = controllers.routes.PreviewEmailController.editEmail(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
-                        @helper.CSRF.formField
-                        <input type="hidden" name="emailId" value="@form.data.getOrElse("emailUUID", "")" />
-                        <input type="hidden" name="composeEmailForm.emailSubject" value="@form.data.getOrElse("composeEmailForm.emailSubject", "")" />
-                        <input type="hidden" name="composeEmailForm.emailBody" value="@form.data.getOrElse("composeEmailForm.emailBody", "")" />
-                        @if(status == null || status != "SENT") {
-                            <button draggable="false"
-                            class="govuk-button govuk-button--secondary govuk-!-width-full"
-                            data-module="govuk-button" id="edit-email-button">
-                                Edit email
-                            </button>
-                        }
-                    }
-                    </div>
-                </div>
+                @drawSendEmailSection()
+                @drawEditMailSection()
             </div>
         }
 
     </div>
-    @if(request.email.isEmpty || request.email.get == "") {
-        <div class="govuk-grid-column-two-thirds">
-        } else {
-        <div>
-        }
+    <div @if(!requestHasEmail()){class="govuk-grid-column-two-thirds"}>
+
     <div class="email-preview" style="border-top: 1px solid #b1b4b6;
         margin-bottom: 10px;
         border-left: 1px solid #b1b4b6;
@@ -172,16 +176,6 @@
         </div>
     </div>
     <br>
-    <div class="govuk-grid-column-one-half govuk-!-padding-left-0">
-        <div class="govuk-button-group">
-        @helper.form(action = controllers.routes.ComposeEmailController.deleteOption(form.data.getOrElse("emailUUID", ""), Json.toJson(userSelection).toString())) {
-            @helper.CSRF.formField
-            <button draggable="false"
-            class="govuk-button   govuk-button--secondary" data-module="govuk-button" id="delete-email-button">
-                Delete email
-            </button>
-        }
-        </div>
-    </div>
+     @drawDeleteButton()
 </div>
 }
