--- a/app/views/DeleteEmail.scala.html
+++ b/app/views/DeleteEmail.scala.html
@@ -24,34 +24,37 @@
         govukButton: GovukButton
 )
 
-@(form: Form[_], action: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], emailUUID: String, userSelection: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = Some(messages("email.confirmation"))) {
+@layout(pageTitle = Some(messages("deleteemail.confirmation"))) {
 
     @errorSummary(form.errors)
 
-    @formHelper(action = action) {
+    @formHelper(action =  uk.gov.hmrc.gatekeepercomposeemailfrontend.controllers.routes.ComposeEmailController.delete(emailUUID, userSelection)) {
 
-        <h1 class="govuk-heading-l">@messages("email.confirmation")</h1>
+        <h1 class="govuk-heading-l" id="page-heading">@messages("deleteemail.confirmation")</h1>
         <div id="are-you-sure-hint" class="govuk-hint">
             Deleted emails cannot be recovered.
         </div>
         @defining({
             Some(Legend(
-                content = HtmlContent(messages("email.confirmation")),
+                content = HtmlContent(messages("deleteemail.confirmation")),
                 isPageHeading = false,
                 classes = "govuk-visually-hidden"
             ))
         }) { legend =>
             @yesNoRadio(
                 form,
-                headingKey = messages("email.confirmation"),
+                headingKey = messages("deleteemail.confirmation"),
                 classes = "govuk-visually-hidden",
                 inline = true,
+                yesRadioMsg = messages("deleteemail.option.yes"),
+                noRadioMsg = messages("deleteemail.option.no"),
                 customLegend = legend
             )
         }
         @govukButton(Button(
+           id= Some("delete-action-button"),
             content = {
                 Text("Continue")
             },
