APIS-6992 Add mssing siteheader link to terms of use

--- a/app/views/include/SiteHeader.scala.html
+++ b/app/views/include/SiteHeader.scala.html
@@ -29,7 +29,8 @@
     Seq(
         NavigationItem(content = Text("APIs"), href = Some(appConfig.apiGatekeeperApisFrontendUrl)),
         NavigationItem(content = Text("Applications"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/applications")),
-        NavigationItem(content = Text("Developers"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/developers2")),
+        NavigationItem(content = Text("Developers"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/developers")),
+        NavigationItem(content = Text("Terms of Use"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/terms-of-use")),
         NavigationItem(content = Text("Email"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/emails")),
         NavigationItem(content = Text("API Approvals"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/pending")),
         NavigationItem(content = Text("XML"), href = Some(s"${appConfig.apiGatekeeperFrontendUrl}/xml-organisations"))
